examples/test/testpolicy7289.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7289
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key17: value33
      key8: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value5
          key30: value21
      podSelector:
        matchLabels:
          key28: value27
          key39: value24
